--- a/roster.html
+++ b/roster.html
@@ -194,13 +194,14 @@ B3 ROSTER
 
 <b>Status</b> -     Draft
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b> 
-             COVID timetable 
+             Final
+          <b><mark>>> COVID timetable <<</mark></b>  
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 11/07, 13:25)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #5 (Thu 15/07, 20:39)   [COVID timetable] CP Closed until lockdown over
+             #4 (Sun 11/07, 13:25)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
              #3 (Sun 11/07, 13:08)   Draft #3
              #2 (Sun 11/07, 08:11)   [Pending Confirmation] &#x1F6CE
                                      Draft #2
@@ -393,14 +394,14 @@ Sean: Can only work Fridays from this week
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1530|8.5   Maya*      Pla^       Vechy+     Pla^       Sean+   |
-| c    1030-1430|4.0   Rei        Maya       Maya       Rei        Maya    |
+| a    0730-1530|      Nere       Nere       Nere       Nere       /       |
+| b    0700-1530|8.5   Maya*      Pla^       Vechy+     Pla^       /       |
+| c    1030-1430|4.0   Rei        Maya       Maya       Rei        /       |
 | tr   1030-1430|4.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Vechy&     Madi       Madi       Madi       Vechy   |
+| d    0630-1500|      Mony       Mony       Mony       Mony       [ M   ] |
+| e    0630-1430|8.0   Vechy&     Madi       Madi       Madi       [   W ] |
 |                                                                          |
 |==========================================================================|
 
@@ -413,14 +414,14 @@ Pla:   Can only work Tue and Fri from this week
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1530|8.5   Maya       Pla^       Maya       Maya       Sean<   |
-| c    1030-1430|4.0   Rei        Maya       []         Rei        Pla%    |
+| a    0730-1530|      /          /          Nere       Nere       Nere    |
+| b    0700-1530|8.5   /          /          Maya       Maya       Sean<   |
+| c    1030-1430|4.0   /          /          /          Rei        Pla%    |
 | tr   1030-1430|4.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Vechy      Madi       Madi       Madi       Vechy   |
+| d    0630-1500|      [ M   ]    [ M   ]    Mony       Mony       Mony    |
+| e    0630-1430|8.0   [   W ]    [   W ]    Madi       Madi       Vechy   |
 |                                                                          |
 |==========================================================================|
 
