--- a/roster.html
+++ b/roster.html
@@ -193,20 +193,15 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-             Pending Confirmation
+          <b><mark>>> Pending Confirmation <<</mark></b
              Final
           <b><mark>>> COVID timetable <<</mark></b>  
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Thu 15/07, 20:39)   [COVID timetable] CP Closed until 
-                                     lockdown over
-             #4 (Sun 11/07, 13:25)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
-             #3 (Sun 11/07, 13:08)   Draft #3
-             #2 (Sun 11/07, 08:11)   [Pending Confirmation] &#x1F6CE
-                                     Draft #2
-             #1 (Sat 10/07, 19:11)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sun 18/07, 12:57)   [Pending Confirmation]
+                                     Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 <!--
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, --><!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><!--<a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>-->
@@ -363,7 +358,7 @@ Mon - Fri
             |CP 0730-1430 (7.0) 
 
 
--->
+
 Monday
     Maya   * |CP 0800-1500 (7.0)
 
@@ -379,35 +374,18 @@ Wednesday
 
 Thursday
     Pla    ^ |CP 0800-1530 (7.5)
-
+-->
 Friday
-    Sean   + |LC 0630-0730 (1.0)
-             |CP 0730-1530 (8.0)
+    Sean   < |LC 0630-0730 (1.0)
+             |CP 0730-1430 (7.0)
+    Pla    %  |CP 1030-1530 (5.0)
 
 -- News --  
 &#x1F320&#x1F308&#x1F929 Welcome Maya to B3 Cafe !! (: &#x1F929&#x1F308&#x1F320
 
-Sean: Can only work Fridays from this week
-|==========================================================================|
-| For week starting    Mon        12/07/2021                               |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       /       |
-| b    0700-1530|8.5   Maya*      Pla^       Vechy+     Pla^       /       |
-| c    1030-1430|4.0   Rei        Maya       Maya       Rei        /       |
-| tr   1030-1430|4.0   /          /          /          /          /       |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Vechy&     Madi       Madi       Madi       Nere    |
-|                                                                          |
-|==========================================================================|
-
 Vechy: Can only work Mon and Fri from this week
 Pla:   Can only work Tue and Fri from this week
+Sean:  Can only work Fridays
 |==========================================================================|
 | For week starting    Mon        19/07/2021    DRAFT                      |
 |==========================================================================|
