--- a/roster.html
+++ b/roster.html
@@ -193,7 +193,7 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b
+          <b><mark>>> Pending Confirmation <<</mark></b>
              Final
           <b><mark>>> COVID timetable <<</mark></b>  
              <!-- [Final] &#x2705
