--- a/roster.html
+++ b/roster.html
@@ -193,14 +193,17 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
           <b><mark>>> COVID timetable <<</mark></b>  
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sun 18/07, 12:57)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Tue 20/07, 08:10)   Lockdown extended. 
+                                     Moved opening date to Thu
+             #2 (Sun 18/07, 23:59)   [Final]
+             #1 (Sun 18/07, 12:57)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 <!--
@@ -394,8 +397,8 @@ Sean:  Can only work Fridays
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      /          /          Nere       Nere       Nere    |
-| b    0700-1530|8.5   /          /          Maya       Maya       Sean<   |
+| a    0730-1530|      /          /          /          Nere       Nere    |
+| b    0700-1530|8.5   /          /          /          Maya       Sean<   |
 | c    1030-1430|4.0   /          /          /          Rei        Pla%    |
 | tr   1030-1430|4.0   /          /          /          /          /       |
 |                                                                          |
