--- a/roster.html
+++ b/roster.html
@@ -200,9 +200,11 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Tue 20/07, 08:10)   Lockdown extended. 
+<b>Changelog</b> -  #4 (Tue 20/07, 08:25)   Added next week's roster
+                                     Note shift time changes
+             #3 (Tue 20/07, 08:10)   Lockdown extended. 
                                      Moved opening date to Thu
-             #2 (Sun 18/07, 23:59)   [Final]
+             #2 (Sun 18/07, 23:59)   [Final]<span id = "paraChangelog" style = "display:none">
              #1 (Sun 18/07, 12:57)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -391,7 +393,7 @@ Vechy: Can only work Mon and Fri from this week
 Pla:   Can only work Tue and Fri from this week
 Sean:  Can only work Fridays
 |==========================================================================|
-| For week starting    Mon        19/07/2021    DRAFT                      |
+| For week starting    Mon        19/07/2021                               |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
@@ -405,6 +407,25 @@ Sean:  Can only work Fridays
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
 | e    0630-1430|8.0   Nere       Nere       Madi       Madi       Vechy   |
+|                                                                          |
+|==========================================================================|
+
+NOTE: Shift time changes (b and c)
+|==========================================================================|
+| For week starting    Mon        26/07/2021    DRAFT                      |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5   Maya+      Maya       Maya       Maya+      Sean    |
+| c    1030-1530|5.0   Rei-       Pla        /          Rei-       Pla     |
+| tr   1030-1430|4.0   /          /          Muoy       /          /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Vechy      Madi       Madi       Madi       Vechy   |
 |                                                                          |
 |==========================================================================|
 
