--- a/roster.html
+++ b/roster.html
@@ -200,7 +200,9 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Tue 20/07, 08:25)   Added next week's roster
+<b>Changelog</b> -  #5 (Tue 20/07, 11:39)   Lockdown extended until 27/07.
+                                     Moved re-opening date.
+             #4 (Tue 20/07, 08:25)   Added next week's roster
                                      Note shift time changes
              #3 (Tue 20/07, 08:10)   Lockdown extended. 
                                      Moved opening date to Thu
@@ -384,11 +386,6 @@ Thursday
 &#x1F320&#x1F308&#x1F929 Welcome Maya to B3 Cafe !! (: &#x1F929&#x1F308&#x1F320
 
 
-Friday
-    Sean   < |LC 0630-0730 (1.0)
-             |CP 0730-1430 (7.0)
-    Pla    %  |CP 1030-1530 (5.0)
-
 Vechy: Can only work Mon and Fri from this week
 Pla:   Can only work Tue and Fri from this week
 Sean:  Can only work Fridays
@@ -399,9 +396,9 @@ Sean:  Can only work Fridays
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      /          /          /          Nere       Nere    |
-| b    0700-1530|8.5   /          /          /          Maya       Sean<   |
-| c    1030-1430|4.0   /          /          /          Rei        Pla%    |
+| a    0730-1530|      /          /          /          /          /       |
+| b    0700-1530|8.5   /          /          /          /          /       |
+| c    1030-1430|4.0   /          /          /          /          /       |
 | tr   1030-1430|4.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
@@ -409,6 +406,11 @@ Sean:  Can only work Fridays
 | e    0630-1430|8.0   Nere       Nere       Madi       Madi       Vechy   |
 |                                                                          |
 |==========================================================================|
+
+
+Thursday
+    Maya   +  |CP 0730-1530 (8.0)
+    Rei    -  |CP 1030-1430 (4.0)
 
 NOTE: Shift time changes (b and c)
 |==========================================================================|
@@ -418,14 +420,14 @@ NOTE: Shift time changes (b and c)
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Maya+      Maya       Maya       Maya+      Sean    |
-| c    1030-1530|5.0   Rei-       Pla        /          Rei-       Pla     |
+| a    0730-1530|      /          /          Nere       Nere       Nere    |
+| b    0700-1430|7.5   /          /          Maya       Maya+      Sean    |
+| c    1030-1530|5.0   /          /          /          Rei-       Pla     |
 | tr   1030-1430|4.0   /          /          Muoy       /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Vechy      Madi       Madi       Madi       Vechy   |
+| e    0630-1430|8.0   Nere       Nere       Madi       Madi       Vechy   |
 |                                                                          |
 |==========================================================================|
 
