--- a/roster.html
+++ b/roster.html
@@ -200,7 +200,9 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Tue 20/07, 11:39)   Lockdown extended until 27/07.
+<b>Changelog</b> -  #6 (Wed 21/07, 07:55)   Fixed errors this week roster,
+                                     Updated next 2 weeks roster
+             #5 (Tue 20/07, 11:39)   Lockdown extended until 27/07.
                                      Moved re-opening date.
              #4 (Tue 20/07, 08:25)   Added next week's roster
                                      Note shift time changes
@@ -403,14 +405,18 @@ Sean:  Can only work Fridays
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Nere       Nere       Madi       Madi       Vechy   |
+| e    0630-1430|8.0   Nere       Nere       Nere       Nere       Nere    |
 |                                                                          |
 |==========================================================================|
 
+Wednesday 
+   Maya    ^ |CP 0730-1530 (8.0)
 
 Thursday
-    Maya   +  |CP 0730-1530 (8.0)
-    Rei    -  |CP 1030-1430 (4.0)
+   Pla     % |CP 0800-1530 (7.5)
+
+Friday
+   Sean    * |LC 0730-1530 (8.0)
 
 NOTE: Shift time changes (b and c)
 |==========================================================================|
@@ -421,13 +427,44 @@ NOTE: Shift time changes (b and c)
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          /          Nere       Nere       Nere    |
-| b    0700-1430|7.5   /          /          Maya       Maya+      Sean    |
-| c    1030-1530|5.0   /          /          /          Rei-       Pla     |
-| tr   1030-1430|4.0   /          /          Muoy       /          /       |
+| b    0730-1430|7.0   /          /          Maya^      Pla%       Sean*   |
+| c    1030-1530|5.0   /          /          /          /          /       |
+| tr   1030-1430|4.0   /          /          /          /          Muoy    |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
 | e    0630-1430|8.0   Nere       Nere       Madi       Madi       Vechy   |
+|                                                                          |
+|==========================================================================|
+
+
+
+Monday 
+    Maya     + |CP 0730-1530 (8.0)
+    Rei      - |CP 1030-1430 (4.0)
+
+Wednesday 
+    Maya     + |CP 0730-1530 ()
+
+Thursday 
+    Maya     + |CP 0730-1530 (8.0)
+    Rei      - |CP 1030-1430 (4.0)
+
+|==========================================================================|
+| For week starting    Mon        02/08/2021    DRAFT                      |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0730-1430|7.5   Maya+      Maya       Maya+      Maya+      Sean    |
+| c    1030-1530|5.0   Rei-       Pla        /          Rei-       Pla     |
+| tr   1030-1430|4.0   /          /          /          /          /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Vechy      Madi       Madi       Madi       Vechy   |
 |                                                                          |
 |==========================================================================|
 
