--- a/roster.html
+++ b/roster.html
@@ -6,8 +6,7 @@ B3 ROSTER
 <style>
 </style>
 <meta charset="UTF-8">
- <script>
-
+<body>
 Mony -- Wrong version. Please reload the "redirect page"
 
 </em>
