--- a/roster.html
+++ b/roster.html
@@ -3,14 +3,10 @@
 B3 ROSTER
 </title>
 <head>
-<style>
-</style>
+</head>
 <meta charset="UTF-8">
 <body>
 Mony -- Wrong version. Please reload the "redirect page"
 
-</em>
-</span></span></div>
-</pre>
 </body>
 </html>
